--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   --white-text-color: #F4F4F1;
   --border-light: #E8E7E1;
   --border-dark: #484640;
+  --border-accent: #D6A40080
 }
 
 /*Fonts & defaults*/
