--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -36,7 +36,12 @@
     display: flex;
     flex-direction: column;
     row-gap: .3rem;
-    padding-left: calc(12rem / 16);
+    list-style-position: inside;
+
+    & li {
+      text-indent: -1.5rem;
+      padding-left: 1.5rem;
+    }
   }
 
 
